# svke

./: .clang-format  .gitignore  CMakeLists.txt  README.md  class.sh  compile.sh  copy_assets.sh
assets/shaders/: fragment.frag  point_light_system.frag  point_light_system.frag.spv  point_light_system.vert  point_light_system.vert.spv  render_system.frag  render_system.frag.spv  render_system.vert  render_system.vert.spv  texture_render_system.frag  texture_render_system.vert  texture_render_system.vert.spv  vertex.spv  vertex.vert
include/: App.hpp
include/Graphics/Color/: Color.hpp
include/Graphics/Core/: Model.hpp  Vertex.hpp
include/Graphics/Projection/: Camera.hpp
include/Graphics/Rendering/: Drawable.hpp
include/SVKE/: Core.hpp  Rendering.hpp  Utils.hpp
include/SVKE/Core/Graphics/: Color.hpp  Pipeline.hpp  Shader.hpp  Texture.hpp  TextureImage.hpp  TextureSampler.hpp  Vertex.hpp
include/SVKE/Core/Input/: Keyboard.hpp  Mouse.hpp  MovementController.hpp
include/SVKE/Core/Math/: Angle.hpp  Matrix.hpp  Vector.hpp
include/SVKE/Core/System/: Device.hpp  Pipeline.hpp  Swapchain.hpp  Window.hpp
include/SVKE/Core/Time/: Timer.hpp
include/SVKE/IO/: Keyboard.hpp  KeyboardMovementController.hpp  MovementController.hpp
include/SVKE/Rendering/: Camera.hpp  FrameInfo.hpp
include/SVKE/Rendering/Descriptors/: DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  DescriptorWriter.hpp
include/SVKE/Rendering/Resources/: Drawable.hpp  Model.hpp  Object.hpp
include/SVKE/Rendering/Systems/: PointLightSystem.hpp  RenderSystem.hpp  Renderer.hpp  TextureRenderSystem.hpp
include/SVKE/Time/: Clock.hpp
include/SVKE/Utils/: HashCombine.hpp
include/System/Core/: Device.hpp  Pipeline.hpp  Swapchain.hpp  Window.hpp
include/System/Memory/: Alignment.hpp
include/System/Rendering/: Renderer.hpp
include/System/Shader/: Shader.hpp
shaders/: fragment.frag  vertex.spv  vertex.vert
src/: App.cpp  CMakeLists.txt  main.cpp
src/Graphics/Color/: Color.cpp
src/Graphics/Core/: Model.cpp
src/Graphics/Projection/: Camera.cpp
src/Graphics/Rendering/: Drawable.cpp
src/SVKE/IO/: Keyboard.cpp  KeyboardMovementController.cpp  Mouse.cpp  MovementController.cpp
src/SVKE/Rendering/: Camera.cpp
src/SVKE/Time/: Clock.cpp  Timer.cpp
src/System/Core/: Device.cpp  Pipeline.cpp  Swapchain.cpp  Window.cpp
src/System/Rendering/: Renderer.cpp
src/System/Shader/: Shader.cpp
(+32 files in other folders)
